--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.3.3
-flask-cors==4.0.0
-razorpay==1.4.2
-python-dotenv==1.0.1
-PyPDF2==3.0.1
-gunicorn==21.2.0
+flask
+flask-cors
+razorpay
+python-dotenv
+PyPDF2
+gunicorn
